Section | Fix wrong color on footer

--- a/src/less/auto-car/section.less
+++ b/src/less/auto-car/section.less
@@ -318,7 +318,7 @@
     text-transform: uppercase;
 
     a {
-      color: @white;
+      color: @brand-primary;
     }
   }
 }
